디테일 수정 전

--- a/page2.html
+++ b/page2.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title> Introduce</title>
-    <link rel="stylesheet" href="./style.css" type="text/css">
+    <title>page2</title>
+    <link rel="stylesheet" href="./style_2.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 </head>
 <body>
@@ -15,7 +15,7 @@
     </div>
     <div> <!--메인-->
         <div class="main"> <!--메인 사진-->
-            <img class="main_img" src="./img/main.jpg" alt="main">
+            <img class="main_img" src="./img/page2.jpg" alt="main">
         </div>
         <div  class="back">
             <div class="info"> <!--회사 소개-->
