--- a/page2.html
+++ b/page2.html
@@ -9,9 +9,9 @@
 <body>
     <div class="bar">
         <p id="brand"><strong>Moment</strong></p>
-        <p id="page">Introduce_1</p>
-        <p>Introduce_2</p>
-        <p>Introduce_3</p>
+        <p id="page">Introduce</p>
+        <p>Product</p>
+        <p>Contact</p>
     </div>
     <div> <!--메인-->
         <div class="main"> <!--메인 사진-->
