--- a/page4.html
+++ b/page4.html
@@ -30,9 +30,9 @@
     <body  onload="initialize()">
         <div class="bar">
             <p id="brand"><strong>Moment</strong></p>
-            <p>Introduce_1</p>
-            <p>Introduce_2</p>
-            <p id="page">Introduce_3</p>
+            <p>Introduce</p>
+            <p>Product</p>
+            <p id="page">Contact</p>
         </div>
         <div> <!--메인-->
             <div class="main"> <!--메인 사진-->
